--- a/src/MedClinic.Desktop/Styles/TextBoxStyles.xaml
+++ b/src/MedClinic.Desktop/Styles/TextBoxStyles.xaml
@@ -72,6 +72,7 @@
                             FontWeight="SemiBold"
                             BorderThickness="0"
                             VerticalAlignment="Center"
+                            Text="{TemplateBinding Text}"
                             Foreground="{DynamicResource BorderColor}"
                             Background="Transparent">
 
@@ -152,6 +153,15 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+    </Style>
+
+    <Style x:Key="FormDatePicker" TargetType="{x:Type DatePicker}">
+        <Setter Property="Background" Value="{DynamicResource BorderColor}"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Foreground" Value="{DynamicResource BorderColor}"/>
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="FontFamily" Value="Jetbrains Mono"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
 
 </ResourceDictionary>
