--- a/src/MedClinic.Desktop/Components/Patients/PatientComponent.xaml
+++ b/src/MedClinic.Desktop/Components/Patients/PatientComponent.xaml
@@ -5,8 +5,57 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MedClinic.Desktop.Components.Patients"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+             Height="60">
+    <Border
+        Background="{StaticResource FirstColor}"
+        Margin="5 5 15 5"
+        CornerRadius="5"
+        BorderBrush="Gray"
+        BorderThickness="0.5">
+
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="70"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="120"/>
+            </Grid.ColumnDefinitions>
+
+            <TextBlock
+                Text="1"
+                x:Name="tb_Number"
+                Grid.Column="0"
+                Margin="10 0 0 0"
+                Style="{StaticResource TitleTextBlock}"/>
+
+            <TextBlock
+                Text="Shodiyor"
+                x:Name="tb_FirstName"
+                Grid.Column="1"
+                Style="{StaticResource TitleTextBlock}"/>
+
+            <TextBlock
+                Text="Erqo'ziyev"
+                x:Name="tb_LastName"
+                Grid.Column="2"
+                Style="{StaticResource TitleTextBlock}"/>
+
+            <TextBlock
+                Text="+998917727005"
+                x:Name="tb_PhoneNumber"
+                Grid.Column="3"
+                Style="{StaticResource TitleTextBlock}"/>
+
+            <Button
+                Name="View_Button"
+                Grid.Column="4"
+                Content="Ko'rish"
+                FontSize="16"
+                Width="100"
+                Style="{StaticResource ViewButton}"/>
+
+        </Grid>
             
-    </Grid>
+    </Border>
 </UserControl>
