--- a/src/MedClinic.Desktop/Styles/ButtonStyles.xaml
+++ b/src/MedClinic.Desktop/Styles/ButtonStyles.xaml
@@ -76,34 +76,36 @@
         </Setter>
     </Style>
 
-    <Style x:Key="MaximizedButton" TargetType="{x:Type Button}">
-        <Setter Property="Height" Value="24"/>
-        <Setter Property="Width" Value="24"/>
+    <Style x:Key="ViewButton" TargetType="{x:Type Button}">
+        <Setter Property="Height" Value="35"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
-        <Setter Property="Margin" Value="10"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
                     <Border 
-                    x:Name="B"
-                    Background="#18FF37"
-                    CornerRadius="25"
-                    >
-                        <Path Fill="White" Data="{DynamicResource border}"
-                          Height="10"
-                          Width="10"
-                          Stretch="Uniform"/>
+                        x:Name="B"
+                        Background="#1DA813"
+                        CornerRadius="5">
+
+                        <Label
+                            FontWeight="SemiBold"
+                            Foreground="White"
+                            VerticalAlignment="Center"
+                            HorizontalAlignment="Center"
+                            FontSize="{TemplateBinding FontSize}"
+                            Content="{TemplateBinding Content}"/>
+
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter TargetName="B" Property="Background" Value="#14D82E"/>
+                            <Setter TargetName="B" Property="Background" Value="#24CE17"/>
                         </Trigger>
                         <Trigger Property="IsMouseOver" Value="False">
-                            <Setter TargetName="B" Property="Background" Value="#18FF37"/>
+                            <Setter TargetName="B" Property="Background" Value="#1DA813"/>
                         </Trigger>
                         <Trigger Property="IsPressed" Value="True">
-                            <Setter TargetName="B" Property="Background" Value="#66FF99"/>
+                            <Setter TargetName="B" Property="Background" Value="#199110"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
