--- a/src/MedClinic.Desktop/Styles/LabelStyles.xaml
+++ b/src/MedClinic.Desktop/Styles/LabelStyles.xaml
@@ -8,6 +8,15 @@
         <Setter Property="FontWeight" Value="SemiBold"/>
     </Style>
 
+    <Style x:Key="TitleTextBlock"  TargetType="{x:Type TextBlock}">
+        <Setter Property="Foreground" Value="{DynamicResource BorderColor}"/>
+        <Setter Property="FontFamily" Value="Jetbrain Mono"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="FontWeight" Value="SemiBold"/>
+    </Style>
+
     <Style x:Key="NameLabel"  TargetType="{x:Type Label}">
         <Setter Property="Foreground" Value="{DynamicResource color}"/>
         <Setter Property="FontFamily" Value="Jetbrain Mono"/>
