--- a/src/MedClinic.Desktop/Styles/ButtonStyles.xaml
+++ b/src/MedClinic.Desktop/Styles/ButtonStyles.xaml
@@ -6,7 +6,7 @@
         <Setter Property="Width" Value="30"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Right"/>
-        <Setter Property="Margin" Value="0 0 15 0"/>
+        <Setter Property="Margin" Value="0 0 10 0"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
@@ -608,6 +608,60 @@
 
                     </ControlTemplate.Triggers>
 
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="TabMenuButton" TargetType="{x:Type RadioButton}">
+        <Setter Property="Height" Value="35"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="Margin" Value="10 0 0 0"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type RadioButton}">
+                    <Border x:Name="B" CornerRadius="5">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="4"/>
+                                <RowDefinition Height="1"/>
+                            </Grid.RowDefinitions>
+                            
+                            <Label 
+                                Grid.Row="0"
+                                x:Name="Label"
+                                FontSize="{TemplateBinding FontSize}"
+                                Content="{TemplateBinding Content}"
+                                FontFamily="Arial"
+                                Foreground="{DynamicResource BorderColor}"
+                                FontWeight="DemiBold"
+                                VerticalAlignment="Center"/>
+
+                            <Border 
+                                Name="TagIndicate"
+                                Grid.Row="1"
+                                Margin="2 0"
+                                CornerRadius="5 5 0 0"
+                                Background="Transparent">
+
+                            </Border>
+
+                        </Grid>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="False">
+                            <Setter TargetName="B" Property="Background" Value="Transparent"/>
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="B" Property="Background" Value="{DynamicResource SeventhColor}"/>
+                        </Trigger>
+                        <Trigger Property="IsChecked" Value="True">
+                            <Setter TargetName="TagIndicate" Property="Background" Value="#4200FF"/>
+                        </Trigger>
+
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
