--- a/src/MedClinic.Desktop/Windows/MainWindows/MainWindow.xaml
+++ b/src/MedClinic.Desktop/Windows/MainWindows/MainWindow.xaml
@@ -31,6 +31,7 @@
                     Grid.Column="1"
                     x:Name="Close"     
                     Click="btnClose_Click"
+                    Margin="0 0 15 0"
                     Style="{DynamicResource ClosedButton}"/>
                     
             </Grid>
