--- a/src/MedClinic.Desktop/App.xaml
+++ b/src/MedClinic.Desktop/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="MedClinic.Desktop.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:MedClinic.Desktop"
-             StartupUri="Windows/Login/LoginWindow.xaml">
+             xmlns:local="clr-namespace:MedClinic.Desktop">
     <Application.Resources>
 
         <ResourceDictionary>
