--- a/src/MedClinic.Desktop/Pages/Rooms/BedCreatePage.xaml
+++ b/src/MedClinic.Desktop/Pages/Rooms/BedCreatePage.xaml
@@ -1,18 +1,19 @@
-﻿<Page x:Class="MedClinic.Desktop.Pages.Rooms.RoomCreatePage"
+﻿<Page x:Class="MedClinic.Desktop.Pages.Rooms.BedCreatePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:MedClinic.Desktop.Pages.Rooms"
       mc:Ignorable="d" 
-      Title="RoomCreatePage">
+      Title="BedCreatePage"
+      Loaded="Page_Loaded">
 
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="100"/>
         </Grid.RowDefinitions>
-        
+
         <StackPanel
             Grid.Row="0"
             Margin="0 60 0 0"
@@ -32,32 +33,33 @@
                 Style="{DynamicResource Update_TextBox_Style}"/>
 
             <TextBlock
-                Text="Xona narxi :"
-                Margin="0 50 0 0"
-                Style="{DynamicResource TitleTextBlock}"/>
-
-            <TextBox
-                Name="tb_RoomPrice"
-                Margin="0 10 0 0"
-                Width="300"
-                MaxLength="10"
-                PreviewTextInput="tb_PreviewTextInput"
-                Style="{DynamicResource Update_TextBox_Style}"/>
-
-            <TextBlock
-                Text="Statusi :"
+                Text="Joylashtirish xonasi :"
                 Margin="0 40 0 0"
                 Style="{DynamicResource TitleTextBlock}"/>
 
             <ComboBox
                 FontSize="16"
-                Height="30"
-                Name="cb_Status"
-                Margin="0 10 0 0">
+                Name="cb_RoomNumber"
+                Margin="0 10 0 0"
+                MaxDropDownHeight="150">
 
-                <ComboBoxItem Content="Easy" FontSize="16"/>
-                <ComboBoxItem Content="Premium" FontSize="16"/>
-                <ComboBoxItem Content="Gold" FontSize="16"/>
+                <ComboBox.ItemContainerStyle>
+                    <Style TargetType="ComboBoxItem">
+                        <Setter Property="Margin" Value="0 0 15 0"/>
+                    </Style>
+                </ComboBox.ItemContainerStyle>
+
+                <ComboBoxItem Content="1"/>
+                <ComboBoxItem Content="2"/>
+                <ComboBoxItem Content="3"/>
+                <ComboBoxItem Content="4"/>
+                <ComboBoxItem Content="5"/>
+                <ComboBoxItem Content="6"/>
+                <ComboBoxItem Content="7"/>
+                <ComboBoxItem Content="8"/>
+                <ComboBoxItem Content="9"/>
+                <ComboBoxItem Content="10"/>
+                <ComboBoxItem Content="11"/>
 
             </ComboBox>
 
