Doctor service is done!

--- a/src/MedClinic.Desktop/Components/Patients/PatientComponent.xaml
+++ b/src/MedClinic.Desktop/Components/Patients/PatientComponent.xaml
@@ -53,6 +53,7 @@
                 Content="Ko'rish"
                 FontSize="16"
                 Width="100"
+                Click="View_Button_Click"
                 Style="{StaticResource ViewButton}"/>
 
         </Grid>
