--- a/src/MedClinic.Desktop/Windows/Notifications/NotificationWindow.xaml
+++ b/src/MedClinic.Desktop/Windows/Notifications/NotificationWindow.xaml
@@ -30,21 +30,36 @@
     </Window.Resources>
 
     <Border 
-        Background="Green" 
+        x:Name="Header_Border"
         CornerRadius="5" 
-        Padding="10" 
         Opacity="0.9">
-        <StackPanel>
-            <TextBlock 
-                x:Name="MessageText" 
-                Foreground="White" 
-                FontSize="16" 
-                TextWrapping="Wrap"/>
-            
-            <Button 
-                Content="OK" 
-                HorizontalAlignment="Right" 
-                Click="CloseButton_Click"/>
-        </StackPanel>
+
+        <Grid>
+
+            <Border
+                x:Name="Close_Button"
+                Margin="5"
+                VerticalAlignment="Top"
+                HorizontalAlignment="Right"
+                MouseDown="Close_Button_MouseDown">
+                <Path 
+                    Fill="White" Data="{DynamicResource x}"
+                    Height="12"
+                    Width="12"
+                    Stretch="Uniform"/>
+            </Border>
+
+            <TextBlock
+                VerticalAlignment="Center"
+                HorizontalAlignment="Center"
+                TextWrapping="Wrap"
+                x:Name="MessageText"
+                Foreground="White"
+                FontWeight="SemiBold"
+                FontSize="15"
+                Margin="5 5 15 5"/>
+
+        </Grid>
+        
     </Border>
 </Window>
