--- a/src/MedClinic.Desktop/Styles/ButtonStyles.xaml
+++ b/src/MedClinic.Desktop/Styles/ButtonStyles.xaml
@@ -671,6 +671,32 @@
 
     <Style x:Key="MainButton" TargetType="{x:Type Button}">
         <Setter Property="Height" Value="40"/>
+        <Setter Property="HorizontalAlignment" Value="Stretch"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border 
+                    x:Name="B"
+                    CornerRadius="5"
+                    Background="{TemplateBinding Background}">
+
+                        <Label
+                        FontFamily="Jetbrains Mono"
+                        FontWeight="SemiBold"
+                        Foreground="White"
+                        FontSize="{TemplateBinding FontSize}"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Center"
+                        Content="{TemplateBinding Content}"/>
+
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="MessageWindow_Button" TargetType="{x:Type Button}">
+        <Setter Property="Height" Value="40"/>
         <Setter Property="Width" Value="140"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
@@ -678,18 +704,18 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
                     <Border 
-                        x:Name="B"
-                        CornerRadius="5"
-                        Background="#1710ED">
+                    x:Name="B"
+                    CornerRadius="5"
+                    Background="#1710ED">
 
                         <Label
-                            FontFamily="Jetbrains Mono"
-                            FontWeight="SemiBold"
-                            Foreground="White"
-                            FontSize="{TemplateBinding FontSize}"
-                            VerticalAlignment="Center"
-                            HorizontalAlignment="Center"
-                            Content="{TemplateBinding Content}"/>
+                        FontFamily="Jetbrains Mono"
+                        FontWeight="SemiBold"
+                        Foreground="White"
+                        FontSize="{TemplateBinding FontSize}"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Center"
+                        Content="{TemplateBinding Content}"/>
 
                     </Border>
                     <ControlTemplate.Triggers>
